se inserta index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="images/logo_cineco.svg" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="images/logo_cineco.svg" alt="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,7 +26,7 @@
           <a class="nav-link" href="#">Pronto</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Cineco Alternativo</a>
+            <a class="nav-link" href="reserva.html">Reserva Aqui</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Comidas</a>
@@ -116,7 +116,7 @@
     <div class="card">
         <img src="images/CALLEJON.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">El Callejon De Las Akmas Perdidas</h5>
+          <h5 class="card-title">El Callejon De Las Almas Perdidas</h5>
           <p class="card-text">En EL CALLEJÓN DE LAS ALMAS PERDIDAS, un ambicioso trabajador de una feria ambulante (Bradley Cooper) con el talento de manipular a la gente con algunas palabras bien elegidas, se une a una psiquiatra (Cate Blanchett) que es incluso más peligrosa que él. Protagonizada por Bradley Cooper, Cate Blanchett, Toni Collette, Willem Dafoe, Richard Jenkins, Rooney Mara, Ron Perlman, Mary Steenburgen y David Strathairn, la película está dirigida por el ganador del premio Oscar® Guillermo del Toro, escrita por Guillermo del Toro y Kim Morgan y producida por Guillermo del Toro y J. Miles Dale.</p>
          
         </div>
